chore: refactor tests, add trim() function